--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
     // Coil
-    implementation "io.coil-kt:coil:1.3.2"
+    implementation ("io.coil-kt:coil:1.3.2")
     implementation "com.google.accompanist:accompanist-coil:0.10.0"
 
     //Dagger - Hilt
